Working on simple curve fitting, with akutan

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -22,17 +22,29 @@ dist.jar=${dist.dir}/SLIMPlugin.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.akutan-1.0.jar=../CurveFitter/lib/akutan-1.0.jar
 file.reference.bio-formats.jar=jars/bio-formats.jar
+file.reference.colt.jar=../CurveFitter/lib/colt.jar
+file.reference.CurveFitter.jar=../CurveFitter/dist/CurveFitter.jar
 file.reference.ij.jar=jars/ij.jar
 file.reference.imglib.jar=jars/imglib.jar
+file.reference.jcommon-1.0.9.jar=../CurveFitter/lib/jcommon-1.0.9.jar
+file.reference.jfreechart-1.0.5.jar=../CurveFitter/lib/jfreechart-1.0.5.jar
 file.reference.loci-common.jar=jars/loci-common.jar
+file.reference.lpsolve55j.jar=../CurveFitter/lib/lpsolve55j.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.ij.jar}:\
     ${file.reference.imglib.jar}:\
     ${file.reference.bio-formats.jar}:\
-    ${file.reference.loci-common.jar}
+    ${file.reference.loci-common.jar}:\
+    ${file.reference.CurveFitter.jar}:\
+    ${file.reference.akutan-1.0.jar}:\
+    ${file.reference.colt.jar}:\
+    ${file.reference.jcommon-1.0.9.jar}:\
+    ${file.reference.jfreechart-1.0.5.jar}:\
+    ${file.reference.lpsolve55j.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -57,7 +69,7 @@ javadoc.windowtitle=
 jaxbwiz.endorsed.dirs="${netbeans.home}/../ide12/modules/ext/jaxb/api"
 main.class=SLIMPlugIn
 meta.inf.dir=${src.dir}/META-INF
-platform.active=default_platform
+platform.active=JDK_1.6
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
