--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,13 @@
       <version>5.0-SNAPSHOT</version>
     </dependency>
 
+    <!-- imagej -->
+    <dependency>
+      <groupId>imagej</groupId>
+      <artifactId>bf-imglib</artifactId>
+      <version>2.0-SNAPSHOT</version>
+    </dependency>
+
     <!-- 3rd party -->
     <dependency>
       <groupId>imagej</groupId>
