--- a/pom.xml
+++ b/pom.xml
@@ -37,11 +37,6 @@
     </dependency>
     <dependency>
       <groupId>imagej</groupId>
-      <artifactId>bf-imglib</artifactId>
-      <version>2.0-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-      <groupId>imagej</groupId>
       <artifactId>ij</artifactId>
       <version>1.43</version>
     </dependency>
@@ -71,6 +66,11 @@
       <version>5.0-SNAPSHOT</version>
     </dependency>
     <dependency>
+      <groupId>mpicbg</groupId>
+      <artifactId>imglib-io</artifactId>
+      <version>2.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
       <groupId>net.java.dev.jna</groupId>
       <artifactId>jna</artifactId>
       <version>3.2.2</version>
@@ -90,7 +90,6 @@
   <build>
     <plugins>
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
         <configuration>
           <archive>
