--- a/pom.xml
+++ b/pom.xml
@@ -2,22 +2,19 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
-    http://maven.apache.org/maven-v4_0_0.xsd">
+    http://maven.apache.org/xsd/maven-v4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
     <groupId>loci</groupId>
-    <artifactId>loci-base-pom</artifactId>
-    <version>1.06</version>
+    <artifactId>loci-base</artifactId>
+    <version>1.0-SNAPSHOT</version>
   </parent>
 
-  <groupId>loci</groupId>
   <artifactId>slim-plugin</artifactId>
-  <version>1.0-SNAPSHOT</version>
 
   <name>SLIMPlugin</name>
   <description>An ImageJ plugin for combined spectral-lifetime image analysis.</description>
-  <url>http://loci.wisc.edu/software</url>
   <inceptionYear>2010</inceptionYear>
 
   <licenses>
@@ -30,24 +27,34 @@
 
   <dependencies>
     <dependency>
-      <groupId>imagej</groupId>
+      <groupId>${bio-formats.groupId}</groupId>
+      <artifactId>bio-formats</artifactId>
+      <version>${bio-formats.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>${imagej.groupId}</groupId>
       <artifactId>ij</artifactId>
-      <version>1.43</version>
+      <version>${imagej1.version}</version>
     </dependency>
     <dependency>
-      <groupId>imagej</groupId>
+      <groupId>${imagej.groupId}</groupId>
       <artifactId>ij1-bridge</artifactId>
-      <version>2.0-SNAPSHOT</version>
+      <version>${imagej.version}</version>
     </dependency>
     <dependency>
-      <groupId>imagej</groupId>
+      <groupId>${imagej.groupId}</groupId>
       <artifactId>ij1-plugin</artifactId>
-      <version>2.0-SNAPSHOT</version>
+      <version>${imagej.version}</version>
     </dependency>
     <dependency>
-      <groupId>imagej</groupId>
+      <groupId>${imagej.groupId}</groupId>
       <artifactId>ij2-imglib</artifactId>
-      <version>2.0-SNAPSHOT</version>
+      <version>${imagej.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>curve-fitter</artifactId>
+      <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>jfree</groupId>
@@ -58,16 +65,6 @@
       <groupId>jfree</groupId>
       <artifactId>jfreechart</artifactId>
       <version>1.0.12</version>
-    </dependency>
-    <dependency>
-      <groupId>loci</groupId>
-      <artifactId>bio-formats</artifactId>
-      <version>5.0-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-      <groupId>loci</groupId>
-      <artifactId>curve-fitter</artifactId>
-      <version>1.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>mpicbg</groupId>
@@ -125,11 +122,15 @@
     </developer>
   </developers>
 
+  <!-- NB: for loci-base, in case of partial checkout -->
   <repositories>
-    <!-- NB: for loci-base-pom -->
     <repository>
       <id>loci.releases</id>
       <url>http://dev.loci.wisc.edu:8081/content/repositories/releases</url>
+    </repository>
+    <repository>
+      <id>loci.snapshots</id>
+      <url>http://dev.loci.wisc.edu:8081/content/repositories/snapshots</url>
     </repository>
   </repositories>
 
