--- a/pom.xml
+++ b/pom.xml
@@ -37,16 +37,6 @@
       <version>${imagej1.version}</version>
     </dependency>
     <dependency>
-      <groupId>${imagej.groupId}</groupId>
-      <artifactId>ij1-bridge-old</artifactId>
-      <version>${imagej.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>${imagej.groupId}</groupId>
-      <artifactId>ij2-imglib-old</artifactId>
-      <version>${imagej.version}</version>
-    </dependency>
-    <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>curve-fitter</artifactId>
       <version>${project.version}</version>
@@ -64,6 +54,11 @@
     <dependency>
       <groupId>mpicbg</groupId>
       <artifactId>imglib</artifactId>
+      <version>2.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>mpicbg</groupId>
+      <artifactId>imglib-ij</artifactId>
       <version>2.0-SNAPSHOT</version>
     </dependency>
     <dependency>
