--- a/pom.xml
+++ b/pom.xml
@@ -53,17 +53,17 @@
     </dependency>
     <dependency>
       <groupId>mpicbg</groupId>
-      <artifactId>imglib</artifactId>
+      <artifactId>imglib1</artifactId>
       <version>2.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>mpicbg</groupId>
-      <artifactId>imglib-ij</artifactId>
+      <artifactId>imglib1-ij</artifactId>
       <version>2.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>mpicbg</groupId>
-      <artifactId>imglib-io</artifactId>
+      <artifactId>imglib1-io</artifactId>
       <version>2.0-SNAPSHOT</version>
     </dependency>
     <dependency>
