--- a/src/main/resources/plugins.config
+++ b/src/main/resources/plugins.config
@@ -2,4 +2,4 @@
 # Author: Aivar Grislis
 # Date: 2010/10/15
 
-Plugins->Lifetime, "SLIM Analysis Plugin", loci.slim.SLIMPlugin("")
+Plugins>Lifetime, "Spectral Lifetime Analysis", loci.slim.SLIM_PlugIn("")
