--- a/pom.xml
+++ b/pom.xml
@@ -27,9 +27,9 @@
 
   <dependencies>
     <dependency>
-      <groupId>${bio-formats.groupId}</groupId>
+      <groupId>${scifio.groupId}</groupId>
       <artifactId>bio-formats</artifactId>
-      <version>${bio-formats.version}</version>
+      <version>${scifio.version}</version>
     </dependency>
     <dependency>
       <groupId>${imagej.groupId}</groupId>
