SLIM Plugin: Moved plugin from it's own "Lifetime" category to existing "Analysis" section.

--- a/src/main/resources/plugins.config
+++ b/src/main/resources/plugins.config
@@ -2,4 +2,4 @@
 # Author: Aivar Grislis
 # Date: 2010/10/15
 
-Plugins>Lifetime, "Spectral Lifetime Analysis", loci.slim.SLIM_PlugIn("")
+Plugins>Analysis, "Spectral Lifetime Analysis", loci.slim.SLIM_PlugIn("")
