--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,12 @@
   <parent>
     <groupId>loci</groupId>
     <artifactId>pom-loci</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <relativePath>../..</relativePath>
   </parent>
 
   <artifactId>slim_plugin</artifactId>
+  <version>1.0.0-SNAPSHOT</version>
 
   <name>SLIMPlugin</name>
   <description>An ImageJ plugin for combined spectral-lifetime image analysis.</description>
