Added unit test for ExcitationScaler & CursorEstimator.  Refactoring.  Tweaking cursor code.

--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,12 @@
       <artifactId>jxlayer</artifactId>
       <version>3.0.4</version>
     </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.8.2</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
