--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,6 @@
     <groupId>loci</groupId>
     <artifactId>pom-loci</artifactId>
     <version>1.0</version>
-    <relativePath>../..</relativePath>
   </parent>
 
   <artifactId>slim_plugin</artifactId>
@@ -41,7 +40,8 @@
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>curve-fitter</artifactId>
-      <version>${project.version}</version>
+      <!-- version>${project.version}</version -->
+	  <version>1.0.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>jfree</groupId>
@@ -56,17 +56,17 @@
     <dependency>
       <groupId>mpicbg</groupId>
       <artifactId>imglib</artifactId>
-      <version>2.0-SNAPSHOT</version>
+      <version>2.0.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>mpicbg</groupId>
       <artifactId>imglib-ij</artifactId>
-      <version>2.0-SNAPSHOT</version>
+      <version>2.0.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>mpicbg</groupId>
       <artifactId>imglib-io</artifactId>
-      <version>2.0-SNAPSHOT</version>
+      <version>2.0.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>net.java.sezpoz</groupId>
@@ -189,6 +189,14 @@
 
   <!-- NB: for project parent, in case of partial checkout -->
   <repositories>
+		<repository>
+			<id>imagej.releases</id>
+			<url>http://maven.imagej.net/content/repositories/releases</url>
+		</repository>
+		<repository>
+			<id>imagej.snapshots</id>
+			<url>http://maven.imagej.net/content/repositories/snapshots</url>
+		</repository>
     <repository>
       <id>loci.releases</id>
       <url>http://dev.loci.wisc.edu/maven2/releases</url>
