--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
   </parent>
 
   <artifactId>slim_plugin</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>2.0.0-SNAPSHOT</version>
 
   <name>SLIMPlugin</name>
   <description>An ImageJ plugin for combined spectral-lifetime image analysis.</description>
@@ -32,6 +32,36 @@
       <artifactId>bio-formats</artifactId>
       <version>${scifio.version}</version>
     </dependency>
+	<dependency>
+		<groupId>${imagej.groupId}</groupId>
+		<artifactId>ij-app</artifactId>
+		<version>${project.version}</version>
+	</dependency>
+	<dependency>
+		<groupId>${imagej.groupId}</groupId>
+		<artifactId>ij-commands</artifactId>
+		<version>${project.version}</version>
+	</dependency>
+	<dependency>
+		<groupId>${imagej.groupId}</groupId>
+		<artifactId>ij-core</artifactId>
+		<version>${project.version}</version>
+	</dependency>
+	<dependency>
+		<groupId>${imagej.groupId}</groupId>
+		<artifactId>ij-io</artifactId>
+		<version>${project.version}</version>
+	</dependency>
+	<dependency>
+		<groupId>${imagej.groupId}</groupId>
+		<artifactId>ij-legacy</artifactId>
+		<version>${project.version}</version>
+	</dependency>
+	<dependency>
+		<groupId>${imagej.groupId}</groupId>
+		<artifactId>ij-ui</artifactId>
+		<version>${project.version}</version>
+	</dependency>
     <dependency>
       <groupId>${imagej.groupId}</groupId>
       <artifactId>ij</artifactId>
