pom.xml: fix license block

--- a/pom.xml
+++ b/pom.xml
@@ -20,8 +20,7 @@
 
   <licenses>
     <license>
-      <name>BSD</name>
-      <url>http://dev.loci.wisc.edu/svn/software/trunk/projects/slim-plugin/LICENSE.txt</url>
+      <name>Simplified BSD License</name>
       <distribution>repo</distribution>
     </license>
   </licenses>
