--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,12 @@
     </license>
   </licenses>
 
+  <properties>
+    <imagej.version>2.0.0-SNAPSHOT</imagej.version>
+    <imglib2.version>2.0.0-beta-15</imglib2.version>
+    <scijava-common.version>2.1.0</scijava-common.version>
+  </properties>
+
   <dependencies>
     <dependency>
       <groupId>${bio-formats.groupId}</groupId>
@@ -90,7 +96,13 @@
     <dependency>
       <groupId>${scifio.groupId}</groupId>
       <artifactId>scifio-bf-compat</artifactId>
-      <version>1.0.0</version>
+      <version>1.1.0</version>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-log4j12</artifactId>
+      <version>1.5.10</version>
       <scope>runtime</scope>
     </dependency>
 
