--- a/pom.xml
+++ b/pom.xml
@@ -8,13 +8,13 @@
   <parent>
     <groupId>loci</groupId>
     <artifactId>pom-loci</artifactId>
-    <version>1.10</version>
+    <version>1.11</version>
   </parent>
 
   <artifactId>slim_plugin</artifactId>
   <version>2.0.0-SNAPSHOT</version>
 
-  <name>SLIMPlugin</name>
+  <name>SLIMPlugin-ij2</name>
   <description>An ImageJ plugin for combined spectral-lifetime image analysis.</description>
   <inceptionYear>2010</inceptionYear>
 
@@ -88,21 +88,13 @@
       <version>3.0.4</version>
     </dependency>
 
-<!-- "scifio-bf-compat and the 4.4.X line aren't intended to be used together" -->
-    <!-- dependency>
+    <dependency>
       <groupId>${scifio.groupId}</groupId>
-      <artifactId>scifio-bf-compat</artifactId>
-      <version>${scifio-bf-compat.version}</version>
+      <artifactId>scifio-lifesci</artifactId>
+	  <version>0.2.2-SNAPSHOT</version>
       <scope>runtime</scope>
-    </dependency -->
-<!-- so instead: -->
-	<dependency>
-		<groupId>loci</groupId>
-		<artifactId>bio-formats</artifactId>
-		<version>4.4.8</version>
-		<scope>runtime</scope>
-	</dependency>
-
+    </dependency>
+	
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
