--- a/pom.xml
+++ b/pom.xml
@@ -93,7 +93,7 @@
 		<dependency>
 			<groupId>${scifio.groupId}</groupId>
 			<artifactId>scifio-lifesci</artifactId>
-			<version>0.2.2</version>
+			<version>${scifio-lifesci.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
