Revert to ImageJ 2.0.0-beta-7.5 for now
This change fixes the build.

Will update to the latest ImageJ2 and ImgLib2 API later as time allows.

--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,8 @@
 	</licenses>
 
 	<properties>
-		<imglib2.version>2.0.0-beta-22</imglib2.version>
+		<imagej.version>2.0.0-beta-7.5</imagej.version>
+		<imglib2.version>2.0.0-beta-20</imglib2.version>
 	</properties>
 
 	<dependencies>
