--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,8 @@
 	<properties>
 		<imagej.version>2.0.0-beta-7.6</imagej.version>
 		<imglib2.version>2.0.0-beta-23</imglib2.version>
+		<scifio.version>0.9.0</scifio.version>
+		<scifio-lifesci.version>0.4.0</scifio-lifesci.version>
 	</properties>
 
 	<dependencies>
