--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,7 @@
 		<dependency>
 			<groupId>net.java.sezpoz</groupId>
 			<artifactId>sezpoz</artifactId>
-			<version>1.9</version>
+			<version>1.9-imagej</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jfree</groupId>
