Rename menu item to "SLIM Curve"
The command still lives in Analyze > Lifetime. The only thing missing is
any mention of "spectra" but that is probably not totally necessary.

--- a/src/main/resources/plugins.config
+++ b/src/main/resources/plugins.config
@@ -21,8 +21,4 @@
 # #L%
 ###
 
-# Name: SLIM Plugin
-# Author: Aivar Grislis
-# Date: 2010/10/15
-
-Analyze>Lifetime, "Spectral Lifetime Imaging (SLIM)", loci.slim.SLIM_PlugIn("")
+Analyze>Lifetime, "SLIM Curve", loci.slim.SLIM_PlugIn("")
