--- a/pom.xml
+++ b/pom.xml
@@ -226,6 +226,16 @@
 		<url>http://jenkins.imagej.net/job/SLIM-plugin/</url>
 	</ciManagement>
 
+	<mailingLists>
+		<mailingList>
+			<name>SLIM Curve</name>
+			<subscribe>http://loci.wisc.edu/mailman/listinfo/slim-curve</subscribe>
+			<unsubscribe>http://loci.wisc.edu/mailman/listinfo/slim-curve</unsubscribe>
+			<post>slim-curve@loci.wisc.edu</post>
+			<archive>http://loci.wisc.edu/pipermail/slim-curve/</archive>
+		</mailingList>
+	</mailingLists>
+
 	<scm>
 		<connection>scm:git:git://github.com/slim-curve/slim-plugin</connection>
 		<developerConnection>scm:git:git@github.com:slim-curve/slim-plugin</developerConnection>
