--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,11 @@
 		</license>
 	</licenses>
 
+	<organization>
+		<name>SLIM Curve</name>
+		<url>https://github.com/slim-curve/</url>
+	</organization>
+
 	<dependencies>
 		<dependency>
 			<groupId>${imagej.groupId}</groupId>
