--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 		<relativePath />
 	</parent>
 
+	<groupId>slim-curve</groupId>
 	<artifactId>slim_plugin</artifactId>
 	<version>2.0.0-SNAPSHOT</version>
 
@@ -33,6 +34,12 @@
 	</organization>
 
 	<dependencies>
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>curve-fitter</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+		</dependency>
+
 		<dependency>
 			<groupId>${imagej.groupId}</groupId>
 			<artifactId>ij</artifactId>
@@ -74,11 +81,6 @@
 			<version>${scijava-common.version}</version>
 		</dependency>
 
-		<dependency>
-			<groupId>loci</groupId>
-			<artifactId>curve-fitter</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
-		</dependency>
 		<dependency>
 			<groupId>net.java.sezpoz</groupId>
 			<artifactId>sezpoz</artifactId>
