POM: update SLIM Curve URL

--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
 
 	<organization>
 		<name>SLIM Curve</name>
-		<url>https://github.com/slim-curve/</url>
+		<url>https://slim-curve.github.io/</url>
 	</organization>
 
 	<dependencies>
