transient start stop macro recordable
This commit includes macro recordability for transient start, stop and
data start. Though it has one minor setback. When setting ant of the three
data it does not check for validity of the range. Will be taken care in
the next commit.

--- a/pom.xml
+++ b/pom.xml
@@ -247,4 +247,9 @@
 		</repository>
 	</repositories>
 
+	<properties>
+		<!-- FIXME -->
+		<enforcer.skip>true</enforcer.skip>
+	</properties>
+
 </project>
